--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,16 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 colorama==0.4.4
 cssselect==1.1.0
+dj-database-url==0.5.0
 Django==4.0.3
+django-heroku==0.3.1
 fake-useragent==0.1.11
 idna==3.3
 importlib-metadata==4.11.3
 lxml==4.8.0
 newsapi-python==0.2.6
 parse==1.19.0
+psycopg2==2.9.3
 pyee==8.2.2
 pypiwin32==223
 pyppeteer==1.0.2
@@ -28,4 +31,5 @@ tzdata==2022.1
 urllib3==1.26.9
 w3lib==1.22.0
 websockets==10.2
+whitenoise==6.0.0
 zipp==3.7.0
