--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dj-database-url==0.5.0
 Django==4.0.3
 django-heroku==0.3.1
 fake-useragent==0.1.11
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 lxml==4.8.0
